@@ -3604,5 +3604,6 @@
 	"json-error-utf8": "Malformed UTF-8 characters, possibly incorrectly encoded",
 	"json-error-recursion": "One or more recursive references in the value to be encoded",
 	"json-error-inf-or-nan": "One or more NAN or INF values in the value to be encoded",
-	"json-error-unsupported-type": "A value of a type that cannot be encoded was given"
+	"json-error-unsupported-type": "A value of a type that cannot be encoded was given",
+	"javascript-error-syntax": "$1"
 }
