@@ -75,6 +75,8 @@ production.
   on Special:Version in their own section. Extensions or skins that are
   installed via composer will not be shown in this section as it is assumed
   they will add the proper credits to the skins or extensions section.
+* Pages with a JavaScript content model are now validated on submission.
+  Script pages containing parse errors are prevented from being saved.
 
 ==== External libraries ====
 * MediaWiki now requires certain external libraries to be installed. In the past
